
	* twittering-mode.el (twittering-goto-previous-status): simplified.

	* twittering-mode.el (twittering-goto-next-status): retrieve
	additional statuses if the function is called at the end of the
	buffer.

	* twittering-mode.el (twittering-render-timeline): use `insert'
	when inserting a status at the end of the buffer in order to keep
	the marker pointing the end of the buffer.

2010-02-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-default-sentinel): Delete a
	call to `twittering-release-process' in the BODYFORM to avoid a
	double release.

2010-02-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-default-sentinel): call
	`twittering-release-process' even if some errors happen.
	(twittering-http-get-default-sentinel): remove invocation of
	`twittering-release-process'.

2010-02-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel): Call
	`twittering-release-process' when status code is not equal to
	"200", forgotten in the 2010-02-06 changing.

	* twittering-mode.el (twittering-status-to-status-datum): Change
	`regex-index' variable to local scope from global one.
	(twittering-status-to-status-datum): Rename `regex-index' to
	`regexp-index'.

	* twittering-mode.el (debug-print): Reduce redundant calls of
	`insert' because it can take multiple arguments.
	(debug-printf): Remove an unnecessary call to `concat' because
	`insert' can take multiple arguments.

2010-02-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el (test-format-status): replace the
	format specifier "%t" with "%T".

	* twittering-mode.el (twittering-extract-timeline-spec): fix the
	regexp for "filter" timeline spec.
	* test/test-twittering-mode.el (timeline-spec): add a test for
	trailing backslashes.

	* twittering-mode.el (twittering-extract-timeline-spec): add error
	messages for some conditions.

	* twittering-mode.el