@@ -10,6 +10,9 @@
 	when inserting a status at the end of the buffer in order to keep
 	the marker pointing the end of the buffer.
 
+	* twittering-mode.el (twittering-render-timeline): move the
+	position correctly even if the buffer is invisible.
+
 2010-02-08  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el (twittering-http-default-sentinel): Delete a
